--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@
     </ul>
 
     <footer class="mt-5">
-      <p>© 2025 Toys NodeJS/MongoDB/API Documentation</p>
+      <p>© Vladislav Kiselev 2025 Toys NodeJS/MongoDB/API Documentation</p>
     </footer>
   </div>
 </body>
